[gd_scene load_steps=2 format=3 uid="uid://cecnbj2dj4w8q"]

[ext_resource type="Script" path="res://scripts/endgame_menu.gd" id="1_eeilx"]

[node name="EndGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eeilx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 485.5
offset_top = 293.5
offset_right = 666.5
offset_bottom = 354.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Better luck next time!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TryAgainButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../MainMenuButton")
text = "Try Again"

[node name="MainMenuButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_right = NodePath(".")
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
